# NekoDiary2

./: .gitignore  ASSETS.md  LICENSE  NekoDiary.spec  README.md  build_windows.ps1  pyproject.toml  run.ps1  仕様書.md
Sozai/: required_images.txt
scripts/: generate_icons.ps1
src/: data_access.py  html_utils.py  main.py  models.py  runtime_paths.py  settings.py  style.qss  ui_mainwindow.py
