[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nekodiary"
version = "0.1.0"
description = "PySide6 diary app backed by SQLite."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
nekodiary = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["style.qss"]
